--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@ layout: content
 
 <head>
   <meta charset="utf-8">
-  <link rel="icon" href="https://irvinecoding.club/assets/images/favicon.png">
-  <link rel="apple-touch-icon" href="https://irvinecoding.club/assets/images/favicon.png">
-  <link rel="apple-touch-startup-image" href="https://irvinecoding.club/assets/images/favicon.png">
+  <link rel="icon" href="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/favicon.png">
+  <link rel="apple-touch-icon" href="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/favicon.png">
+  <link rel="apple-touch-startup-image" href="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/favicon.png">
   <meta name="apple-mobile-web-app-title" content="Irvine Coding Club">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#e4d882">
@@ -19,8 +19,8 @@ layout: content
   <meta property="og:locale" content="en_US" />
   <meta name="description" content="Serving Students in Orange County" />
   <meta property="og:description" content="Serving Students in Orange County" />
-  <link rel="canonical" href="https://irvinecoding.club/contact.html" />
-  <meta property="og:url" content="https://irvinecoding.club/contact.html" />
+  <link rel="canonical" href="https://forrest-zeng.github.io/Forrest-Zeng-ASB/contact.html" />
+  <meta property="og:url" content="https://forrest-zeng.github.io/Forrest-Zeng-ASB/contact.html" />
   <meta property="og:site_name" content="Irvine Coding Club" />
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:title" content="Contact" />
@@ -84,7 +84,7 @@ layout: content
   <p>Contact the Irvine Coding Club. Responses will usually be sent back after a few hours to the email you have provided.</p>
 
   <div class="container">
-    <form action="https://contact.irvinecoding.club/" method="POST" id="contact">
+    <form action="https://contact.forrest-zeng.github.io/Forrest-Zeng-ASB/" method="POST" id="contact">
       <label for="email">Email</label>
       <input type="text" id="email" name="email" placeholder="Email address..." autofocus autocomplete="email">
 
