--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ image: assets/images/favicon.png
 ================================================== -->
 <section class="intro full-width">
     <div class="wrapintro">
-        <h1>Irvine Coding Club</h1>
-        <text class="lead">A 501(c)(3) Non-Profit Organization Run By Students</text>
+        <h1>Forrest Zeng</h1>
+        <text class="lead">Forrest Zeng, ASB President Candidate</text>
         <!-- <a href="/discord" class="btn">Meet Us Now!</a>
         ================================================== -->
     </div>
