--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ image: assets/images/favicon.png
 <section class="intro full-width">
     <div class="wrapintro">
         <h1>Forrest Zeng</h1>
-        <text class="lead">Forrest Zeng, ASB President Candidate</text>
+        <text class="lead">Forrest Zeng, Rancho ASB President Candidate</text>
         <!-- <a href="/discord" class="btn">Meet Us Now!</a>
         ================================================== -->
     </div>
